Improve design of lower form elements

--- a/index.htm
+++ b/index.htm
@@ -28,15 +28,28 @@
             <div id="ctr-list"></div>
         </div>
         <div class="container">
-            Data: <select id="choose-view-data"><option value="0">Total</option><option value="1">Rate</option></select> Interval: <input id="view-interval" type="number" min="1" value="300" /><br />
+            <div class="input-group">
+                <div class="input-group-fix text-cell">Data:</div>
+                <select id="choose-view-data"><option value="0">Total</option><option value="1">Rate</option></select>
+                <div class="input-group-fix text-cell">Interval:</div>
+                <input id="view-interval" type="number" min="1" value="300" />
+            </div>
             <div id="chart"></div>
-            <select id="choose-export-format"><option value="0">JSON</option><option value="1">CSV (Excel)</option></select>
-            <button id="export">Download</button>
+            <div class="input-group">
+                <div class="input-group-fix"><button id="export">Download</button></div>
+                <select id="choose-export-format"><option value="0">JSON</option><option value="1">CSV (Excel)</option></select>
+            </div>
         </div>
         <div class="container">
-            Counter: <select class="choose-counter"></select><br />
-            Counter-Name: <input type="text" id="ctr-name" /><br />
-            <button id="del-ctr">– Delete</button> <button id="add-ctr">+ Add</button>
+            <select id="choose-counter-1" class="choose-counter"></select><br />
+            <div class="input-group">
+                <div class="input-group-fix text-cell">Name:</div>
+                <input type="text" id="ctr-name" />
+            </div>
+            <div class="input-group">
+                <button id="del-ctr">– Delete</button>
+                <button id="add-ctr">+ Add</button>
+            </div>
         </div>
     </body>
 </html>
